--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.12.0",
+    "daisyui": "^4.12.10",
     "masto": "^6.8.0",
     "nuxt": "^3.12.3",
     "vue": "latest"
