--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxtjs/composition-api": "^0.34.0",
     "@nuxtjs/tailwindcss": "^6.12.0",
+    "@pinia/nuxt": "^0.5.2",
     "daisyui": "^4.12.10",
     "masto": "^6.8.0",
     "nuxt": "^3.12.3",
+    "pinia": "^2.2.0",
+    "vue": "latest"
+  },
+  "overrides": {
     "vue": "latest"
   }
 }
