--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxtjs/composition-api": "^0.34.0",
     "@nuxtjs/tailwindcss": "^6.12.0",
     "@pinia/nuxt": "^0.5.2",
+    "@vueuse/core": "^10.11.0",
     "daisyui": "^4.12.10",
     "masto": "^6.8.0",
     "nuxt": "^3.12.3",
