--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "masto": "^6.8.0",
     "nuxt": "^3.12.3",
     "pinia": "^2.2.0",
-    "vue": "latest"
+    "vue": "latest",
+    "vue3-carousel": "^0.3.3"
   },
   "overrides": {
     "vue": "latest"
