--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "masto": "^6.8.0",
     "nuxt": "^3.12.3",
     "pinia": "^2.2.0",
+    "radix-vue": "^1.9.3",
     "vue": "latest",
     "vue3-carousel": "^0.3.3"
   },
