--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@nuxtjs/composition-api": "^0.34.0",
     "@nuxtjs/tailwindcss": "^6.12.0",
     "@pinia/nuxt": "^0.5.2",
+    "@primevue/themes": "^4.2.2",
     "@tanstack/vue-query": "^5.52.2",
     "@vueuse/core": "^10.11.0",
     "daisyui": "^4.12.10",
     "masto": "^6.8.0",
     "nuxt": "^3.12.3",
     "pinia": "^2.2.0",
+    "primevue": "^4.2.2",
     "radix-vue": "^1.9.3",
     "vue": "latest",
     "vue-feather-icons": "^5.1.0",
@@ -29,6 +31,7 @@
     "vue": "latest"
   },
   "devDependencies": {
+    "@primevue/nuxt-module": "^4.2.2",
     "sass": "^1.77.8"
   }
 }
