--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "masto": "^6.8.0",
     "nuxt": "^3.12.3",
     "pinia": "^2.2.0",
+    "primeicons": "^7.0.0",
     "primevue": "^4.2.2",
     "radix-vue": "^1.9.3",
     "vue": "latest",
